--- a/report/references.tex
+++ b/report/references.tex
@@ -26,11 +26,18 @@
   \url{http://www.st.com/content/st_com/en/products/ecosystems/stm32-open-development-environment/stm32-nucleo-expansion-boards/stm32-ode-sense-hw/x-nucleo-53l0a1.html}
 \bibitem{android-service}
   \url{https://developer.android.com/reference/android/app/Service.html}
+\bibitem{lat-long-calc}
+  \url{https://www.movable-type.co.uk/scripts/latlong.html}
+\bibitem{rhumb-line}
+  \url{https://en.wikipedia.org/wiki/Rhumb_line}
+\bibitem{equitriangular}
+  \url{https://en.wikipedia.org/wiki/Equirectangular_projection}
+\bibitem{haversine}
+  \url{https://en.wikipedia.org/wiki/Haversine_formula}
 \bibitem{animal} 
 D.L. Hall and J. Llinas. An introduction to multisensor data fusion. 
 \textit{Proceedings of the}. IEEE, 85(1):6 –23, jan 1997
 
- 
 \bibitem{boken} 
 BOKEN
 \textit{BOKEN}. 
