--- a/report/main.tex
+++ b/report/main.tex
@@ -5,6 +5,7 @@
 \usepackage[numbers,super]{natbib}
 \usepackage{lipsum}
 \usepackage{amssymb,amsmath}
+\usepackage{gensymb}
 \usepackage{listings}
 \usepackage{amsfonts}
 \usepackage{todonotes}
