--- a/report/references.tex
+++ b/report/references.tex
@@ -34,6 +34,8 @@
   \url{https://en.wikipedia.org/wiki/Equirectangular_projection}
 \bibitem{haversine}
   \url{https://en.wikipedia.org/wiki/Haversine_formula}
+\bibitem{sailing}
+  \url{https://en.wikipedia.org/wiki/Sailing}
 \bibitem{animal} 
 D.L. Hall and J. Llinas. An introduction to multisensor data fusion. 
 \textit{Proceedings of the}. IEEE, 85(1):6 –23, jan 1997
