--- a/report/main.tex
+++ b/report/main.tex
@@ -92,6 +92,7 @@
 
 \section{The Physics of Sailing}
 \label{sec:physics}
+\chapterauthor{Henrik Theolin (Oskar Axelsson)}
 \input{physics.tex}
 
 \section{Product Application}
