--- a/report/references.tex
+++ b/report/references.tex
@@ -36,6 +36,8 @@
   \url{https://en.wikipedia.org/wiki/Haversine_formula}
 \bibitem{sailing}
   \url{https://en.wikipedia.org/wiki/Sailing}
+\bibitem{sail-force}
+  \url{http://newt.phys.unsw.edu.au/~jw/sailing.html}
 \bibitem{animal} 
 D.L. Hall and J. Llinas. An introduction to multisensor data fusion. 
 \textit{Proceedings of the}. IEEE, 85(1):6 –23, jan 1997
