--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -37,5 +37,11 @@ The primary functional goals are as follows:
 		\item[-] Implement an appropriate sensor
 		\item[-] Implement a centerboard-depth sensor
 	\end{itemize}
+	\item[.] Feedback to the user of the system
+	\begin{itemize}
+		\item[-] Give the user information from the sensors
+		\item[-] Display instructions to help improve the sailing experience depeding on the system state
+		\item[-] Implement different ways for the user to retrieve information
+	\end{itemize}
 \end{itemize}
 
