--- a/report/physics.tex
+++ b/report/physics.tex
@@ -1,5 +1,5 @@
 \subsection{Point of sail}
-A sailboat can achive velocity by catching wind in the sail at different angles. This is called point of sail and the velocity is dependent on the displacement from the true wind direction, the wind experienced from a stationary object, where the velocity is a resultant of the force vector created by the wind depending on the alignemnt of the sail and the direction from where the wind is coming. There are five different states of point of sail that are divided into degrees away from the true wind origin. These are
+A sailboat can achive velocity by catching wind in the sail at different angles. This is called point of sail and the velocity is dependent on the dinghys displacement from the true wind direction, the wind experienced for a stationary object, where the velocity is a resultant of the force vector created by the wind depending on the alignemnt of the sail and the direction from where the wind is coming. There are five different states of point of sail that are divided into degrees away from the true wind origin. These are
 \begin{labeling}{alligator}
 \item [Luffing] (no propulsive force) angle between 0-30\degree
 \item [Close-hauled] (lift) angle between 30-50\degree
