--- a/report/physics.tex
+++ b/report/physics.tex
@@ -21,4 +21,4 @@ and are represented in figure \ref{points-sail}. A sailor wants to prevent the s
 \label{max_liftl}
 \end{figure}
 \subsection{Velocity}
-The main goal in sailing is to maximize the efficiency at which the forces on the sail translates into velocity of the dinghy. A layman might expect that the fastest velocity is achived when the dinghy is parallel to the true wind, however this is not accurate. The apperent wind which is the wind experienced from the dingys perspective is what propells the dingy. When sailing paralell to the wind the dingys speed can never exceed the speed of the wind\cite{sail-force}. By sailing upwind close-halued the apperent wind is increased as the dingy accelerates until the drag from the water exceeds the forwad force created from the wind. To further increase the velocity of the dingy should not be heeling excessivly. This is to prevent the centerboard from acting as a rudder and changing the bearing and introducing more drag from the stern rudder when compansating for the bearing changes. As mentioned earlier the centerboard helps to counteract heeling but also the sailor can prevent this by hiking, leaning outside of the hull to alter the center of mass for the dinghy. Lastly when all other measures were taken the sailor must perform reefing and reducing the area of the sail and lowering the center of effort from the sails.
+The main goal in sailing is to maximize the efficiency at which the forces on the sail translates into velocity of the dinghy. A layman might expect that the fastest velocity is achived when the dinghy is parallel to the true wind, however this is not accurate. The apperent wind which is the wind experienced from the dingys perspective is what propells the dingy. When sailing paralell to the wind the dingys speed can never exceed the speed of the wind\cite{sail-force}. By sailing upwind close-halued the apperent wind is increased as the dingy accelerates until the drag from the water exceeds the forwad force created from the wind. To further increase the velocity of the dingy should not be heeling excessivly. This is to prevent the centerboard from acting as a rudder and changing the bearing, introducing more drag from the stern rudder when compansating for the bearing changes. As mentioned earlier the centerboard helps to counteract heeling but also the sailor can prevent this by hiking, leaning outside of the hull to alter the center of mass for the dinghy. Lastly when all other measures were taken the sailor must perform reefing and reducing the area of the sail and lowering the center of effort from the sails.
