--- a/report/references.tex
+++ b/report/references.tex
@@ -38,6 +38,10 @@
   \url{https://en.wikipedia.org/wiki/Sailing}
 \bibitem{sail-force}
   \url{http://newt.phys.unsw.edu.au/~jw/sailing.html}
+\bibitem{volvo}
+  \url{https://sv.wikipedia.org/wiki/Volvo_Amazon}
+\bibitem{png}
+  \url{https://sv.wikipedia.org/wiki/PNG}
 \bibitem{animal} 
 D.L. Hall and J. Llinas. An introduction to multisensor data fusion. 
 \textit{Proceedings of the}. IEEE, 85(1):6 –23, jan 1997
