--- a/report/android.tex
+++ b/report/android.tex
@@ -1,21 +1,32 @@
 \subsection{Android application}
 \chapterauthor{Theolin, Henrik (no one)}
-The main reason for this project is to give a sailor qualitative feedback and help in clearing the mind of the techniques required to achieve a smooth sailing experience so that the sailor can focus on the joy of sailing. It is therefore crucial that the data is displayed in a manner that is easy to interpret and provide the help that is called for. To increase the flexibility of the design it was decided to implement several different user interfaces that the user could switch between while running the application. This was determined to be a good way of increasing the chances that the user would find a interface to it's liking. It was also determined that not only visual representaion would be the best way to go since the sailor needs to be in constant motion to counteract the forces applied on the ship by the wind and current. This would make watching a screen to retreive information somewhat difficult. Other ways of representing data was implemented using text-to-speech where the sailor would get important information by sound aswell as text. Vibration was also used with different vibration sequences depending on diffenrent sates of the ship.
+The main reason for this project is to give a sailor qualitative feedback and help in clearing the mind of the techniques required to achieve a smooth sailing experience so that the sailor can focus on the joy of sailing. A crucial part was that the data was displayed in a manner that was easy to interpret and provide the help that was called for. To further increase the flexibility of the design it was decided to implement several different user layouts that the user could switch between while running the application. This was determined to be a good way of increasing the chances that the user would find a preferable layout. It was also determined that not only visual representaion would be the best way to go since the sailor needed to be in constant motion to counteract the forces applied on the ship by the wind and current. This would make watching a screen to retreive information somewhat difficult. Other ways of representing data was implemented using text-to-speech where the sailor would get important information by sound aswell as text. Vibration was also used with different vibration sequences depending on different states of the ship.
 
 
 \subsubsection{Feedback}
-For the feedback states used in the application there were some approximations and simplifications made for easier implementation. A sailor can 
+For the feedback states used in the application there were some approximations and simplifications made for easier implementation. As explained in the Physics of sailing chapter there are certain parameters that could be evaluated into different states of the dinghy. A big approximation was made that there is no water movement for all our implementions. The states implemented were
+\begin{labeling}{alligator}
+\item [Clear] - The dinghy holds good velocity and not heeling or drifting
+\item [Drifting] - The dinghy is drifting perpendicular to the bearing
+\item [Heeling] - The dinghy is heeling exceededly
+\item [Reefing] - The dinghy is heeling and drifting
+\item [Adrift] - The dinghy is navigating to course far from set waypoint
+\item [Running] - The dinghy is sailing directly windwards.
+\end{labeling}
+Given these states appropriate feedback was given to the user.
+
 \subsubsection{Visual Feedback}
 It was determined that the visual feedback given to the sailor was to include very little text information and would consist mainly of images that changes position based on sensor data to give a good representation of what was going on with the ship. Because of different personal preferences the ability to switch between different layouts was implemented. To switch between different layouts a simple swipe on the screen toggled the view to the next layout. All layouts consisted of a subset of views from the complete set including
 \begin{labeling}{alligator}
-\item [\ref{feedback-incline} Incline]  displayed a ships relative incline against and artificial horizont
-\item [\ref{feedback-pressure} Pressure] moved a pin along a colored bar to represent high of low pressure applied on the centerboard
-\item [\ref{feedback-compass} Bearing] rotated a compass to show the ship relative bearing against true north
-\item [\ref{feedback-map} Map] displayed current location of the ship
-\item [\ref{feedback-drift} Drift] was represented with a colored bar with two arrows that moved to the relative drift direction to show the sailor if the ship was holding it's set navigaitional reference.
-\item [Feedback] a text that changed values based on the current state of the boat
-\item [Height] the height of the centerboard was represented with a visual centerboard moving up and down along a graphical ruler
-\item [Wave frequency] displayed a wave moving towards a ship at a speed representing different periods of the waves.
+\item [\ref{feedback-incline} \textbf{Incline}]  displayed a ships relative incline against and artificial horizont
+\item [\ref{feedback-pressure} \textbf{Pressure}] moved a pin along a colored bar to represent high of low pressure applied on the centerboard
+\item [\ref{feedback-compass} \textbf{Bearing}] rotated a compass to show the ship relative bearing against true north
+\item [\ref{feedback-map} \textbf{Map}] displayed current location of the ship
+\item [\ref{feedback-drift} \textbf{Drift}] was represented with a colored bar with two arrows that moved to the relative drift direction to show the sailor if the ship was holding it's set navigaitional reference.
+\item [\ref{feedback-height} \textbf{Speed}] displayed a speedometer from a classical Swedish vehicle\cite{volvo} with a movable bar representing speed over ground
+\item [\ref{feedback-sog} \textbf{Height}] of the centerboard was represented with a visual centerboard moving up and down along a graphical ruler
+\item [\ref{feedback-wave} \textbf{Wave frequency}] displayed a wave moving towards a ship at a speed representing different periods of the waves
+\item [\ref{feedback-text} \textbf{Feedback}] a text that changed values based on the current state of the boat
 \end{labeling}
 
 \begin{figure}[H]
@@ -48,7 +59,31 @@ It was determined that the visual feedback given to the sailor was to include ve
 \caption{Drift feedback view}
 \label{feedback-drift}
 \end{figure}
-The figures were chosen at a development stage and improvements can easily be made by adding different \textit{PNG} files in android studio.
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.4\textwidth]{Figures/height.png}
+\caption{Centerboard height view}
+\label{feedback-height}
+\end{figure}
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.8\textwidth]{Figures/sog.png}
+\caption{Speed over ground view}
+\label{feedback-sog}
+\end{figure}
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.8\textwidth]{Figures/wave.png}
+\caption{Wave period feedback view}
+\label{feedback-wave}
+\end{figure}
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.8\textwidth]{Figures/text.png}
+\caption{Text feedback view}
+\label{feedback-text}
+\end{figure}
+The figures were chosen at a development stage and improvements can easily be made by adding different \textit{PNG}\cite{png} files in android studio.
 
 \subsubsection{Audio feedback}
 Based on values from the sensors different states were implemented and for each state a text was read out to the sailor. A priority for each state to prevent less important events from interrupting the more important ones. The feedback was implemented such that the audio feedback would continue even if the device was put in sleep mode.
