--- a/report/main.tex
+++ b/report/main.tex
@@ -73,6 +73,7 @@
 
 \clearpage
 \begin{abstract}
+test!!!\\
 \input{abstract.tex}
 \end{abstract}
 
@@ -100,6 +101,7 @@
 \input{application.tex}
 
 \section{Hardware Design}
+\label{sec:hwdesign}
 
 \clearpage
 \section{Sensors}
