--- a/report/main.tex
+++ b/report/main.tex
@@ -73,7 +73,6 @@
 
 \clearpage
 \begin{abstract}
-test!!!\\
 \input{abstract.tex}
 \end{abstract}
 
@@ -105,7 +104,7 @@ test!!!\\
 
 \clearpage
 \section{Sensors}
-\chapterauthor{Lundberg, Josef (no one)}
+\chapterauthor{Lundberg, Josef (Brolin, Daniel)}
 \input{sensors.tex}
 
 \clearpage
