--- a/report/sensors.tex
+++ b/report/sensors.tex
@@ -1,17 +1,21 @@
+%In order to sail properly and make the most out of the wind that’s is supplied by the nature itself some data acquisition is needed. The sailing is all about this harnessing all the forces of the nature and the wind that it pushing towards you. Since there has not been any other extensive projects and measurements in this particular area the measurements have to be done in new ways. 
+Since all kinds of sailboats main feature is to move completely analogue without the need of fuel or electricity, the use and optimization of surrounding forces are of foremost importance. Measuring this will provide the sailor with all the information needed to optimize the way they move and control their dinghy.
 
-In order to sail properly and make the most out of the wind that’s is supplied by the nature itself some data acquisition is needed. The sailing is all about this harnessing all the forces of the nature and the wind that it pushing towards you. Since there has not been any other extensive projects and measurements in this particular area the measurements have to be done in new ways. 
+To get any kind of measurements of the dinghy, sensors are needed. As of now there are sensors measuring a wide array of items. This section will talk about these sensors; what they measure, where they were purchased, the requirements on the sensor, their features, drawbacks and also how they were implemented.
 
 \subsection{Force sensors}
+The goal is to have a system that can measure the forces from the water pushing on the centerboard. 
+%The implementation:
 
-The goal here is to have a system that can measure the forces that pushes on the centerboard by the water it goes through. 
-The implementation:
-By looking at some different solutions there is not any other solutions that might be as clean looking and prominent as this approach. Important to know is that every solution is mandatory to be waterproof and sealed properly from the harsh environment that this system has as its home turf. The solutions that required the sensors to be mounted on the outside or in parts that would be in danger if a crash might occur was scratched.  
-The board itself will not be disassembled in any major part of way. Meaning that this approach doesn’t need any modifications to the board itself. This has been the goal and the choosen approach. Modifications in the mounting plate is the way to go, the other solutions is either way more difficult to apply and mount or more complex.
+% What is ``this'' approach? Talk first about the approach, then this sentence.
+%There might not already be any other solutions as clean and simple as this approach.
+By looking at some different solutions there are no other solutions that might be as clean looking and prominent as this approach. Important to know is that every solution is mandatory to be waterproof and sealed properly from the harsh environment that this system has as its home turf. The solutions that required the sensors to be mounted on the outside or in parts that would be in danger if a crash might occur was scratched.  
+The board itself will not be disassembled in any major part of way. Meaning that this approach doesn’t need any modifications to the board itself. This has been the goal and the chosen approach. Modifications in the mounting plate is the way to go, the other solutions is either way more difficult to apply and mount or more complex.
 
-\subsection{The prototype}
+\subsection{The prototype}% If this is about the same as ``Force sensors'', use ``\subsubsection instead.
 To implement the gauges, a prototype is designed to show how the measurements will be made. The prototype is a bit bigger than the intended solution for this project but it's good to see how it would be constructed. The function is easy to understand. The board goes on the outside and can easily slide up and down past this ball.  The ball itself is kept inside this small area where it can move in and out.
  
-\begin{figure}[H]
+\begin{figure}[H]%look at later figures comment
 \begin{center}
 	\includegraphics[width = 10cm]{Figures/Press_sens_func_1.png}
 	\caption{Function of first prototype}
@@ -24,7 +28,7 @@ The main case for this strategy was that in the start of this project these gaug
 
 A model of the pressure sensor was constructed in the CAD program fusion 3D. This model was created in order to clearly show the function of this sensor and to help the thought process involved in the improving of this design.
 
-\begin{figure}[H]
+\begin{figure}[H]%look at later figures comment
 \begin{center}
 	\includegraphics[width = 10cm]{Figures/Press_sens_prot_1.png}
 	\caption{Function of first prototype}
@@ -37,7 +41,7 @@ The gauge itself will measure a small difference in resistance. This small diffe
 New idea:
 A better solution is to make some research into load cells, which is a sensor which also utilizes strain gauges to measuring forces. The difference is that the gauges are already implemented in the sensor. The difference in the prototype is instead of having a metal plate, it can be built with a piece of plastic or rubber which can deform so the force is distributed directly to the sensor. By implementing this sensor, a lot of time was saved in troubleshooting. And by having a sensor unit, the modified mounting plate will be easier to produce. 
  
-\begin{figure}[H]
+\begin{figure}[H]%look at later figures comment
 \begin{center}
 	\includegraphics[width = 10cm]{Figures/Press_sens_func_2.png}
 	\caption{Function of second prototype}
@@ -47,11 +51,11 @@ A better solution is to make some research into load cells, which is a sensor wh
 
 \subsection{Choice of component}
 
-The force from the board onto the mounting plate will be a considerable amount. The actual force is something that’s not known for sure. The initial assumption was that a load cell with a 90.75 kg force range should be enough. In the case the sensor will be maxed out the cell it's rated for a 150\% overload without causing some damage to the sensor.
-The choosen sensor for this application is selected to this part, the compression load cell called FX1901. 
+The force from the board onto the mounting plate will be a considerable amount. The actual force is something that’s not known for sure. The initial assumption was that a load cell with a $90.75Kg$ force range should be enough. In the case the sensor will be maxed out the cell it's rated for a $150\%$ overload without causing some damage to the sensor.
+The chosen sensor for this application is selected to this part, the compression load cell called FX1901. 
 From the datasheet the voltage readings of this piece could be calculated. With a maximum voltage reading of around $36mV/V$
 
- \begin{figure}[H]
+ \begin{figure}[H]%look at later figures comment
 \begin{center}
 	\includegraphics[width = 10cm]{Figures/Load_cell.png}
 	\caption{Load cell, FX1901}
@@ -65,16 +69,17 @@ From the datasheet the voltage readings of this piece could be calculated. With 
 
 
 In order for the microcontroller to make some good measurements from the load cell an amplification for the  
-That’s a small signal and needs to be amplified to get some good measurements. A good measurement signal to the MCU should be in the order of in between 0 - 5 volts. 
-This is achieved by an amplification gain of around 20. 
+That’s a small signal and needs to be amplified to get some good measurements. A good measurement signal to the MCU should be in the order of in between $0 - 5$ volts. 
+This is achieved by an amplification gain of around $20$. 
 
 
-A suitable amplifier needs to be choosen from the vast ocean of different models. Inspiration is taken from The university of Chicago\ref{UoC} in an experiment where they uses this exact load cell togheter with an instrumental amplifier called INA125. This amplifier is somewhat more complicated and have some more feautures that other amplifiers. In the same family of instrument amplifiers a model called INA126 is selectet as a less complicated and more power efficiant solution.
+A suitable amplifier needs to be chosen from the vast ocean of different models. Inspiration is taken from The university of Chicago\cite{UoC} in an experiment where they uses this exact load cell together with an instrumental amplifier called INA125. This amplifier is somewhat more complicated and have some more features than other amplifiers. %What features? What other amplifiers?
+In the same family of instrument amplifiers a model called INA126 is selected as a less complicated and more power efficient solution.
 
 
-The choice fell on this little fellow, the INA126. 
+The choice fell on this little fellow, the INA126. %Why is this line here? If this is a reference to a picture make sure to use a reference instead, i.e. "The choice fell on the INA126, see fig. \ref{INA126}, since it best followed our requirements"
 
-\begin{figure}[H]
+\begin{figure}[H]%Make this [tb] and take away [width= X ]  if it is already smaller than \textwidth. Otherwise it will be stretched which will look weird.
 \begin{center}
 	\includegraphics[width = 10cm]{Figures/INA126.png}
 	\caption{Amplifier for the load cell signal}
@@ -84,14 +89,16 @@ The choice fell on this little fellow, the INA126.
 
 
 Which not look so interesting but has the benefit of having a smaller power consumption then many others by being a bit simpler than many others. But sufficient for our purpose.
+%Didn't you write in the last paragraph it was power efficient already? And you also wrote it was more complicated and had more features but here you say it's simpler but sufficient? Can this be clarified?
 
 It seems like a smart choice because when the system is battery operated, like in this case, every watt counts.
-The gain on this piece is easily calculated with this function. Gain is 5 plus 80k ohm divided by our chosen resistor Rg.
+
+The gain on this piece is easily calculated with this function. Gain is 5 plus 80k ohm divided by our chosen resistor Rg. % Why write this in plain text when it's already written below? just refer to it!
 
 
 
-If our desired 20 gain might not work or the voltages calculated is off, the gain is easily redone with this expression.
-\begin{equation}
+If our desired 20 gain might not work or the voltages calculated is off, the gain is easily redone with this expression. %It's the same equation...
+\begin{equation}%add a \label{labelname} to refer to this equation.
 Gain = 5 + \frac{80k\Omega}{R_G}
 \end{equation}
 
@@ -99,12 +106,12 @@ Gain = 5 + \frac{80k\Omega}{R_G}
 Now that we know how to get the force measurements, we are going to talk about how to measure the frequency of waves at sea.
 
 
-\subsection{Height of daggerboard sensor}
+\subsection{Height of centerboard sensor}
 
-The main issues might be that the Height of daggerboard: 
-One of the best implementations of a height sensor would be the use of a linear wire distance sensor. This particular sensor measures how far a wire is pulled, which gives a very accurate measurement. This solution can be totally watertight and concealed in the main centerplate.  
+The main issues might be that the Height of centerboard: % That the height of the centerboard what?
+One of the best implementations of a height sensor would be the use of a linear wire distance sensor. This particular sensor measures how far a wire is pulled, which gives a very accurate measurement. This solution can be completely watertight and concealed in the main centerboard.  
 
- \begin{figure}[H]
+\begin{figure}[H]% As mentioned before, H -> tb, Refer to all figures used, use width only to /restrict/ size.
 \begin{center}
 	\includegraphics[width = 10cm]{Figures/microepsilon_mk30.png}
 	\caption{Linear draw wire sensor, Micro epsilon MK30}
@@ -112,36 +119,40 @@ One of the best implementations of a height sensor would be the use of a linear 
 \end{center}
 \end{figure}
  
-We have found some sensors that might work for us, this is the smallest we found. It's 3 cm wide and about 5 cm high. As we have some tight space constraints this can probably fit inside or just stick out a little bit. This particular sensor is in the range of 2000 kr, which feel like a lot. But if no other solution works this might be considered again.  
+%Don't use ``this'' without first saying which one. If it's the one in the figure, refer to it by name and then put in a reference to the figure.
+%Do not use ``We, us, he, she,...'' and so on in reports. Wold recommend the following:
+%The sensor fulfilling our requirements of both functionality and size is the following, NAME, see fig. (\ref{FIGURELABEL}). It is ...
+% ``As we have some tight space requirements this can probably fit...'' -> ``As there are some tight space requirements the module needs to fit''
+%Avoid all loaded terms and terms that is not objective, such as ``feel like''.
+We have found some sensors that might work for us, this is the smallest we found. It is $3cm$ wide and about $5cm$ high. As we have some tight space constraints this can probably fit inside or just stick out a little bit. This particular sensor is in the range of $2000sek$, which feel like a lot. But if no other solution works this might be considered again.  
 
 
-We have also looked into some light sensors. This is implemented with the use of a plate placed ion top of the dagger-board and with the light being sent up to this panel, the height can be calculated. First we looked into some ir-sensors. They will probably send the signal in a wide spread which will make the distance measurement troublesome as this signal has just a small plate to bounce of.  
+We have also looked into some light sensors. This is implemented with the use of a plate placed ion top of the dagger-board and with the light being sent up to this panel the height can be calculated. First we looked into some IR\footnote{Infrared}-sensors; they will probably send the signal in a wide spread pattern which will make the distance measurement troublesome as this signal has just a small plate to bounce off of.  
   
+%Put all of this paragraph: -->
+With the use of a LIDAR\footnote{LIght Detection And Ranging} system, we can point our light signal at an exact spot and then get an exact measurement of the height.  
+Many of the LIDAR systems found was both too large and expensive to be implemented in this project.
+%Many of the lidar systems we found was too big for our project and also very expensive.  
+A suitable small sensor for the Sailoraid system could be the ``micro LIDAR'' circuit from adafruit%\cite{REFERENCE to circuit!}.
+%A suitable sensor that we found was a small "micro lidar" circuit from adafruit: 
 
-But with the use of a LIDAR system, we can point our light signal at an exact spot and then get an exact measurement of the height.  
-Many of the lidar systems we found was too big for our project and also very expensive.  
-A suitable sensor that we found was a small "micro lidar" circuit from adafruit: 
+\subsubsection{Component}% How about: ``$\mu$LIDAR VL53L0X'' ?
+% --> here
 
 
-
-
-\subsubsection{Component}
-
-
-
- \begin{figure}[H]
-\begin{center}
+\begin{figure}[H]
+	\centering %\centering can be used inside environments (i.e. all \begin{} here \end{}) and centers everything inside.
 	\includegraphics[width = 10cm]{Figures/Adafruit_height_sensor.png}
-	\caption{Time of flight distance sensor, Adafruit VL53L0X}
+	\caption{Time of flight, $\mu$LIDAR, distance sensor Adafruit VL53L0X}
 	\label{micro_lidar}
-\end{center}
 \end{figure}
-Problems: 
+Problems: % Some problems with this module could be compiled. 
 
-As there will always be water around and on the centerplate the light that is sent might get directed "wrong" if there is only some small water droplets in between the sensor and the panel that we want to reflect our light on. 
+As there will always be water around and on the centerplate there is risk of misdirection. The light that is sent might get misdirected if intercepted by water droplets between the sensor and the panel of which the light is to be reflected. %that we want to reflect our light on. 
 
-By the fact that the senor have to be water proof the signal has to go through a medium. The medium can be some type of plastic or even glass.  
-If the signal can be read correctly through this medium or if the signal will get corrupted, we don't know yet. That is something that we need to test later when our parts has come in. 
+By the fact that the sensor has to be waterproof the signal has to go through a medium, which can be some type of plastic or even glass.  
+If the signal can be read correctly through this medium or if the signal will get corrupted must be further tested. %Remember to print results here later.
+%That is something that we need to test later when our parts has come in. 
 
 
 
