--- a/report/titlepage.tex
+++ b/report/titlepage.tex
@@ -17,7 +17,7 @@
 
 \HRule\\[0.8cm]
 
-{\huge\bfseries Project SailorAid}\\[0.4cm] % Title of your document
+{\huge\bfseries Project \project}\\[0.4cm] % Title of your document
 
 \HRule\\[1.5cm]
 
